Enum payment_method {
  CASH
  CREDIT_CARD
  DEBIT_CARD
  BANK_TRANSFER
  PIX
}

Enum entry_movement_category {
  PURCHASE
  ADJUSTMENT
}

Enum exit_movement_category {
  MATERIAL_REQUEST
  STOCK_LOCATION_TRANSFER
  DEFECTIVE
  RETURN
  ADJUSTMENT
}

Enum material_request_status {
  PENDING
  CANCELLED
  DENIED
  APPROVED
  WAITING_PURCHASE
  WAITING_ARRIVAL
  FINISHED
}

Table user {
  id int [pk, increment]
  name varchar(100)
  phone varchar(20)
  cpf varchar(14)
  email varchar(300) [unique]
  username varchar(50) [unique]
  password varchar(100)
  requires_password_reset boolean [default: false]
  password_reset_token varchar(255)
  password_reset_token_expires_at datetime
  role_id int [ref: > role.id]
  department_id int [ref: > department.id]
  policy_id int [ref: > policy.id]
  profile_picture text
  created_by int [ref: > user.id]
  updated_by int [ref: > user.id]
  created_at datetime [not null, default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table role {
  id int [pk, increment]
  name varchar(50) [unique]
  description VARCHAR(100)
  created_by int [ref: > user.id]
  updated_by int [ref: > user.id]
  created_at datetime [not null, default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table policy {
  id int [pk, increment]
  name varchar(100) [unique]
  description varchar(255)
  resource varchar(100)
  action varchar(255)
  created_by int [ref: > user.id]
  updated_by int [ref: > user.id]
  created_at datetime [not null, default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table role_policies {
  id int [pk, increment]
  role_id int [ref: > role.id]
  policy_id int [ref: > policy.id]
  created_by int [ref: > user.id]
  updated_by int [ref: > user.id]
  created_at datetime [not null, default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table department {
  id int [pk, increment]
  name varchar(100)
  manager_id int [ref: > user.id]
  created_by int [ref: > user.id]
  updated_by int [ref: > user.id]
  created_at datetime [not null, default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table address {
  id int [pk, increment]
  street varchar(255)
  number varchar(20)
  neighborhood varchar(100)
  city varchar(100)
  state varchar(100)
  country varchar(100)
  complement varchar(255)
  created_by int [ref: > user.id]
  updated_by int [ref: > user.id]
  created_at datetime [not null, default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table supplier {
  id int [pk, increment]
  corporate_name varchar(255)
  trade_name varchar(255)
  cnpj varchar(14) [unique]
  email varchar(255) [unique]
  phone varchar(20)
  address_id int [ref: > address.id]
  created_by int [ref: > user.id]
  updated_by int [ref: > user.id]
  created_at datetime [not null, default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table product_brand {
  id int [pk, increment]
  name varchar(100) [unique]
  created_by int [ref: > user.id]
  updated_by int [ref: > user.id]
  created_at datetime [not null, default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table product_category {
  id int [pk, increment]
  name varchar(200)
  description text
  parent_id int [ref: > product_category.id]
  created_by int [ref: > user.id]
  updated_by int [ref: > user.id]
  created_at datetime [not null, default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table measurement_unit {
  id int [pk, increment]
  name varchar(100) [unique]
  symbol varchar(20)
  type varchar(20)
  created_by int [ref: > user.id]
  updated_by int [ref: > user.id]
  created_at datetime [not null, default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table product {
  id int [pk, increment]
  name varchar(200)
  code varchar(50) [unique]
  description text
  category_id int [ref: > product_category.id]
  brand_id int [ref: > product_brand.id]
  measurement_unit_id int [ref: > measurement_unit.id]
  min_stock int
  created_by int [ref: > user.id]
  updated_by int [ref: > user.id]
  created_at datetime [not null, default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table stock_location {
  id int [pk, increment]
  name varchar(100)
  description text
  address_id int [ref: > address.id]
  created_by int [ref: > user.id]
  updated_by int [ref: > user.id]
  created_at datetime [not null, default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table stock_balance {
  id int [pk, increment]
  product_id int [ref: > product.id]
  stock_location_id int [ref: > stock_location.id]
  quantity int [default: 0]
  created_by int [ref: > user.id]
  updated_by int [ref: > user.id]
  created_at datetime [not null, default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table purchase {
  id int [pk, increment]
  used_nf_xml_document boolean
  total float
  supplier_id int [ref: > supplier.id]
  estimated_delivery_date datetime
  purchase_date datetime
  nf_number int
  nf_serie int
  internal_notes varchar
  created_by int [ref: > user.id]
  updated_by int [ref: > user.id]
  created_at datetime [not null, default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table purchase_item {
  id int [pk, increment]
  product_id int [ref: > product.id]
  quantity int
  unit_price float
  total float
  purchase_id int [ref: > purchase.id]
  created_by int [ref: > user.id]
  updated_by int [ref: > user.id]
  created_at datetime [not null, default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table purchase_payment {
  id int [pk, increment]
  payment_method payment_method
  total float
  purchase_id int [ref: > purchase.id]
  created_by int [ref: > user.id]
  updated_by int [ref: > user.id]
  created_at datetime [not null, default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table movement_entry {
  id int [pk, increment]
  entryDate datetime
  entry_movement_category entry_movement_category
  purchase_id int [ref: > purchase.id]
  created_by int [ref: > user.id]
  updated_by int [ref: > user.id]
  created_at datetime [not null, default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table movement_exit {
  id int [pk, increment]
  exitDate datetime
  exit_movement_category exit_movement_category
  purchase_id int [ref: > purchase.id]
  created_by int [ref: > user.id]
  updated_by int [ref: > user.id]
  created_at datetime [not null, default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table movement {
  id int [pk, increment]
  product_id int [ref: > product.id]
  quantity int
  movement_exit_id int [ref: > movement_exit.id]
  movement_entry_id int [ref: > movement_entry.id]
  stock_location_id int [ref: > stock_location.id]
  created_by int [ref: > user.id]
  updated_by int [ref: > user.id]
  created_at datetime [not null, default: `now()`]
  updated_at datetime
  deleted_at datetime

  Note: 'CRITICAL RULE: Exactly one of (movement_exit_id, movement_entry_id) must be NOT NULL.'
}

Table material_request {
  id int [pk, increment]
  status material_request_status
  requester_justification varchar
  created_by int [ref: > user.id]
  updated_by int [ref: > user.id]
  created_at datetime [not null, default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table material_request_item {
  id int [pk, increment]
  product_id int [ref: > product.id]
  quantity int
  delivered boolean
  material_request_id int [ref: > material_request.id]
  created_by int [ref: > user.id]
  updated_by int [ref: > user.id]
  created_at datetime [not null, default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table material_request_status_log {
  id int [pk, increment]
  material_request_id int [ref: > material_request.id]
  previous_status material_request_status
  current_status material_request_status
  change_justification varchar(255)
  created_by int [ref: > user.id]
  updated_by int [ref: > user.id]
  created_at datetime [not null, default: `now()`]
  updated_at datetime
  deleted_at datetime
}

Table error_log {
  id int [pk, increment]
  level varchar(50)
  message varchar(1000)
  status_code int
  is_operational boolean [default: true]
  stack text
  path varchar(500)
  method varchar(10)
  metadata json
  created_at datetime [not null, default: `now()`]
}

Table system_log {
  id int [pk, increment]
  entity_name varchar(100)
  entity_id int
  action varchar(50)
  user_id int [ref: > user.id]
  metadata json
  created_by int [ref: > user.id]
  updated_by int [ref: > user.id]
  created_at datetime [not null, default: `now()`]
  updated_at datetime
  deleted_at datetime
}